--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,3 +8,11 @@ map {
 .scroll {
   height: 100%;
 }
+
+.lastSent {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  z-index: 30;
+  text-align: right;
+}
