--- a/www/templates/screens/settings.html
+++ b/www/templates/screens/settings.html
@@ -4,6 +4,7 @@
   </ion-nav-buttons>
   <ion-content>
     <h1>Work in progress</h1>
+    <a href="#/app/settings/login">Log in</a>
   </ion-content>
 
 </ion-view>
